--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,9 +1,12 @@
-$brand-800:#316FEA;
-$brand-900:#265cc5;
-$gray-900:#1A1919;
-$gray-800:#060E1E;
-$gray-200:#E3E6E9;
-$gray-300:#D3D8DC;
-$gray-500:#A1ABB5;
-$black:#000000;
-$white:#ffffff
+$brand-800: #316fea;
+$brand-900: #265cc5;
+$error-700: rgb(238, 12, 12);
+$grey-900: #1a1919;
+$grey-800: #060e1e;
+$grey-500: #a1abb5;
+$grey-400: #bec5cc;
+$grey-300: #d3d8dc;
+$grey-200: #e3e6e9;
+$grey-100: #f5f5f5;
+$black: #000000;
+$white: #ffffff;
