--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,12 +1,30 @@
-@import  "./reset";
-@import  "./fonts";
-@import  "./colors";
+@import "./reset";
+@import "./fonts";
+@import "./colors";
 
-body{
+body {
 	font-family: Grotesque;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 20px;
 	background-color: $white;
-	color: $gray-800;
+	color: $grey-800;
+}
+
+.app {
+	height: 100vh;
+	padding-block: clamp(16px, 12vw, 40px);
+}
+
+.wrapper {
+	width: min(430px, 100%);
+	padding-inline: 15px;
+	margin-inline: auto;
+	text-align: center;
+}
+
+h1 {
+	font-size: clamp(26px, 6vw, 30px);
+	color: $black;
+	font-weight: 700;
 }
